tests/ui/typeck/duplicate_selectors.stderr
error: function signature hash collision
  --> ROOT/tests/ui/typeck/duplicate_selectors.sol:LL:CC
   |
LL |     function mintEfficientN2M_001Z5BWH() public {}
   |     ---------------------------------------------- note: first function
LL | }
LL | 
LL | contract D is C {
   |          ^
LL |
LL |     function BlazingIt4490597615() public {}
   |     ---------------------------------------- note: second function
   |
   = note: the function signatures `mintEfficientN2M_001Z5BWH()` and `BlazingIt4490597615()` produce the same 4-byte selector `0x00000000`

error: aborting due to 1 previous error

